some_hope/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: hello
spec:
  defaultBackend:
    service:
       name: hello
       port:
         number: 8080
