some_hope/ingress-etherpad.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: etherpad.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etherpad
            port:
              number: 9001
